fix button link broken on firefox

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ input[type='tel']::placeholder {
 
 .button-list {
   margin: 3em 0;
-  text-align: right;
+  text-align: center;
 }
 
 .button + .button {
